file(GLOB hdrs "*.h*") #Добавляем в переменную hdrs все файлы с расширением .h
file(GLOB srcs "*.cpp") #Добавляем в переменную srcs все файлы с расширением .cpp

add_executable(${vector} ${srcs} ${hdrs}) #Создаем проект с именем из переменной ${PROJECT_NAME}, в него добавляются файлы из переменных ${srcs} и ${hdrs}

#add_library(${vector} STATIC ${srcs} ${hdrs}) #Создаем статическую библиотеку с именем из переменной ${vector}, объявленной в родительском CMake файле (локальные переменные переносятся в наследников), в неё добавляются файлы из переменных ${srcs} и ${hdrs}


#Собираем проект в поддиректории lib1
target_link_libraries(${vector} ${vectorlib}) #Подключаем к проекту с именем ${vector} библиотеку с именем ${vectorlib}